# Luxum

./: .gitignore  CMakeLists.txt  paper.md  parameters.yaml  parameters_3d.yaml  readme.md
docs/: Doxyfile
docs/html/: annotated.html  classes.html  classfield-members.html  classfield.html  classfield__coll__graph.map  classfield__coll__graph.md5  classfileio-members.html  classfileio.html  classgrid-members.html  classgrid.html  classgrid__coll__graph.map  classgrid__coll__graph.md5  classmaxwell-members.html  classmaxwell.html  classmaxwell__coll__graph.map  classmaxwell__coll__graph.md5  classmpidata-members.html  classmpidata.html  classparallel-members.html  classparallel.html  classreader-members.html  classreader.html  classvfield-members.html  classvfield.html  classvfield__coll__graph.map  classvfield__coll__graph.md5  classwriter.html  dir_000001_000000.html  dir_000001_000003.html  dir_000002_000001.html  dir_000002_000003.html  dir_000003_000002.html  dir_000005_000000.html  dir_19373f467389307dc54ab8a6e9e19559.html  dir_19373f467389307dc54ab8a6e9e19559_dep.map  dir_5d0aa56803c8250a5d891761f6bfc5c7.html  dir_5d0aa56803c8250a5d891761f6bfc5c7_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_8dbb857ee0db1a7dffda2408a3c29852.html  (+108 more)
install/: recompile.sh  remake.sh
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/solvers/: CMakeLists.txt  main.cc  maxwell.cc  maxwell.h
src/solvers/three_dim/: maxwell_three_dim.cc  maxwell_three_dim_pml.cc
src/solvers/two_dim/: maxwell_two_dim.cc  maxwell_two_dim_pml.cc
(+152 files in other folders)
